Add Hugo structure, and add "A tour of Self"

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "public"]
 	path = public
-	url = https://sin-ack:e04d1d27dd4aa55500aa76c1e801cb8d52e03496@github.com/sin-ack/sin-ack.github.io.git
+	url = https://github.com/sin-ack/sin-ack.github.io.git
+[submodule "themes/texify"]
+	path = themes/texify
+	url = https://github.com/sin-ack/hugo-theme-texify.git
