--- a/config.toml
+++ b/config.toml
@@ -18,6 +18,12 @@ unsafe = true
     identifier = "archives"
     name = "Archives"
     url = "/posts/"
+    weight = 1
+
+[[menu.main]]
+    identifier = "rss-feed"
+    name = "RSS Feed"
+    url = "/index.xml"
     weight = 2
 
 [params]
